--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,15 +19,17 @@ sans-serif; */
     --accent: #e7e9fc;
     /* cloud  */
     --light: #f4f4fd;
+    /* shadow */
+    --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
     
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--text);
     background-color: #ffffff;
-
+    
 }
-
 .logo {
     display: block;
     font-family: 'Raleway';
@@ -38,6 +40,7 @@ body {
     text-decoration: none;
     color: var(--dark);
     text-transform: uppercase;
+    
 }
 
 .foot-logo {
@@ -54,39 +57,43 @@ body {
 .low-logo {
     color: var(--primary-brand);
     text-transform: uppercase;
+    
 }
 .main-nav {
     display: flex;
     align-items: center;
-    
-}
+    margin-left: 156px;
+    margin-right: 156px;
+        }
 .site-nav {
     display: flex;   
-    margin-left: 70px; 
+    margin-left: 77px; 
 }
 .site-nav li {
-    display: block;
+    display: flex;
     margin-right: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    
 }
 .site-nav .item:last-child {
-    margin-right 0px;
+    margin-right: 0px;
 }
 
 .nav-links {
+    display: block;
+    padding-top: 21px;
+    padding-bottom: 21px;
     
-    text-decoration: none;
     font-family: 'Roboto';
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
     color: var(--dark);
+    text-decoration: none;
     }
     .mail{
         display: flex;
         margin-left: auto;
-    }
+            }
     .mail .item + .item{ 
         margin-left: 40px;
     }
@@ -133,7 +140,12 @@ ul {
     background-color: var(--primary-brand);
     color: #ffffff
 }
-
+.card-content { 
+    padding-left: 32px;
+    padding-right: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+ }
 .card-title {
     font-family: 'Roboto';
     font-style: normal;
@@ -147,10 +159,8 @@ ul {
 }
 
 .card-text {
-    font-family: 'Roboto';
-
-    font-size: 16px;
-    line-height: 1.5;
+    font-family: inherit
+       
 }
 
 .main-button {
@@ -158,11 +168,18 @@ ul {
     color: #ffffff;
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 18.75px;
+    letter-spacing: 4%;
     cursor: pointer;
     border: none;
+    padding: 16px 32px;
+    border-radius: 4px;
+    margin-bottom: 192px;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 .main-button:hover,
 .main-button:focus {
@@ -170,167 +187,159 @@ ul {
     color: #ffffff
 }
 .feature_list {
-    width: 1440px;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
-}
+    }
 .feature_list .item {
     width: 264px;
     margin-right: 24px;
-    margin-bottom: 120px;
-}
+   }
 .section-list {  
     display: block;
     justify-content: center;
-    width: 1440px;
-    padding-left: 132px;
-    padding-right: 132px;
-    margin-top: 120px;
-    margin-left: auto;
-    margin-right: auto;
+    align-items: center;
+    margin-bottom: 120px;
 }
-.card-title {
+
+.card-title_list {
     display: flex;
     justify-content: center;
-    margin-bottom: 72px;
-}
-.card-title_list {
-    width: 1440px;
-    display: flex;
-    flex-wrap: wrap;
     align-items: center;
-    padding-right: 24px;
+    gap: 24px;
+}
+img{
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 .team-list {
-    width: 1440px;
-    padding-left: 132px;
-    padding-right: 132px;
+    width: 1158px;
     margin-left: auto;
     margin-right: auto;
-}
-.card-title_team {
+    background-color: var(--light);
+    }
+.card-title-head,
+.card-title_team
+ {
     display: flex;
     justify-content: center;
     margin-top: 120px;
     margin-bottom: 72px;
-
+    font-weight: 600;
+     font-size: 36px;
+     line-height: 40px;
+     letter-spacing: 2%;
+     color: #2E2F42;
+     margin-bottom: 72px;
 }
-
 .flex_container {
      display: flex;
-     flex-wrap: wrap;
-     background-color: var(--light);
+     justify-content: center;   
+     
     }
 .team-list-item {
         width: 264px;
         margin-right: 24px;
-        margin-bottom: 120px;
         background-color: #ffffff;
-    }
-.team-list-item:nth-child(4n) {
-        margin-right: 0;
-     }
+        box-shadow: var(--card-shadow);
+        }
 
-.footer {
-    background-color: var(--dark);
-}
-
-.footer-text {
-    color: var(--accent);
-    font-size: 16px;
-    line-height: 1.5;
-}
-
-.hero { 
-    width: 1440px;
+.container_hero { 
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
     height: 603px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: var(--dark);
 }
-
 .hero-title {
     font-weight: 600;
     font-size: 56px;
-    line-height: 1.07;
-    letter-spacing: 0.3px;
+    line-height: 60px;
+    letter-spacing: 2%;
     color: #ffffff;
-    margin-top: 192px;
     margin-bottom: 48px; 
     margin-top: 192px;
     margin-left: 474px;
     margin-right: 474px;
-}
-.main-button
-{
-    margin-bottom: 192px;
-    border-radius: 4px;
+    padding: 0px 110px;
+    
 }
 .feature, .pbl{
-    display: none;
+    visibility: hidden;
+    }
 
-}
 .section-page{
     padding-top: 96px;
     padding-bottom: 120px;
-
 }
-.container{
-    width: 1198px;
+.container_btn {
+    width: 1158px;
     padding: 0 15px;
     margin-left: auto;
     margin-right: auto;
-    
-}
+    }
 .portfolio-btn_list {
     display: flex;
     justify-content: center;
     gap: 24px;
+    margin-top: 96px;
     margin-bottom: 72px;
 }
 
 .portfolio-btn_item {
 
 }
-
 .portfolio-btn {
     line-height: 1.5;
     font-size: 16px;
     padding: 12px 24px;
-    
-}
+    }
 .portfolio-cards_list {
+    padding: 0;
+    margin: 0;
+    list-style: none;
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
     flex-wrap: wrap;
     flex-basis: calc(100% / 3);
+    
 }
-
 .portfolio-cards_item {
-   
     flex-basis: calc((100% - 2 * 24px) / 3) ;
+    box-shadow: var(--card-shadow);
+    border-radius: 10px;
+    overflow: hidden;
 }
-
+.card-content{
+    padding-left: 16px;
+}
+.card-title{
+    margin-top: 32px;
+}
+.card-text{
+    margin-top: 8px;
+}
 .portfolio-cards_box {
     padding: 32px 16px;
 }
 .footer {
-    width: 1440px;
-    display: flex;
-    flex-direction: column;
-    
-    }
-.foot-logo {
-    margin-top: 100px; 
-    margin-left: 156px;
-    
+    background-color: var(--dark);
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 156px;    
+    margin-top: 120px;
 }
 .footer-text {
-    padding: 16px 1020px 100px 156px;
-        
-
+    color: var(--accent);
+    font-size: 16px;
+    line-height: 1.5;
     }
