--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,6 +216,7 @@ img{
     width: 1158px;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 120px;
     background-color: var(--light);
     }
 .card-title-head,
@@ -304,6 +305,7 @@ img{
 .portfolio-cards_list {
     padding: 0;
     margin: 0;
+    padding-bottom: 120px;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -336,8 +338,7 @@ img{
     padding-top: 100px;
     padding-bottom: 100px;
     padding-left: 156px;    
-    margin-top: 120px;
-}
+   }
 .footer-text {
     color: var(--accent);
     font-size: 16px;
