update html file

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,8 @@ body {
     text-decoration: none;
     color: var(--dark);
     text-transform: uppercase;
+    padding-top: 24px;
+    padding-bottom: 24px;
     
 }
 
@@ -57,17 +59,20 @@ body {
 .low-logo {
     color: var(--primary-brand);
     text-transform: uppercase;
+    padding-top: 24px;
+    padding-bottom: 24px;
     
 }
 .main-nav {
     display: flex;
     align-items: center;
-    margin-left: 156px;
-    margin-right: 156px;
-        }
+    text-shadow: 0 4px 4px black;
+}
 .site-nav {
-    display: flex;   
+    display: flex;  
+    margin: 0; 
     margin-left: 77px; 
+        
 }
 .site-nav li {
     display: flex;
@@ -80,8 +85,8 @@ body {
 
 .nav-links {
     display: block;
-    padding-top: 21px;
-    padding-bottom: 21px;
+    padding-top: 24px;
+    padding-bottom: 24px;
     
     font-family: 'Roboto';
     font-weight: 600;
@@ -90,11 +95,14 @@ body {
     color: var(--dark);
     text-decoration: none;
     }
-    .mail{
+.mail{
         display: flex;
+        margin: 0;
         margin-left: auto;
-            }
-    .mail .item + .item{ 
+        padding-top: 24px;
+        padding-bottom: 24px;
+      }
+    .mail .item{ 
         margin-left: 40px;
     }
 .nav-links:hover,
@@ -111,6 +119,7 @@ body {
     line-height: 1.5;
     text-decoration: none;
     color: var(--text);
+    
 }
 
 .contacts:hover,
@@ -122,7 +131,7 @@ ul {
     list-style-type: none;
 }
 
-.button {
+button {
     background-color: var(--light);
     color: var(--primary-brand);
     font-family: 'Roboto';
@@ -132,11 +141,12 @@ ul {
     line-height: 1.5;
     cursor: pointer;
     border: none;
+    border-radius: 4px;
 
 }
 
-.button:hover,
-.button:focus {
+button:hover,
+button:focus {
     background-color: var(--primary-brand);
     color: #ffffff
 }
@@ -146,20 +156,23 @@ ul {
     padding-top: 16px;
     padding-bottom: 16px;
  }
-.card-title {
+.card-title_1 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 24px;
+    margin: 0;
+    margin-bottom: 8px;
     /* identical to box height, or 120% */
 
     letter-spacing: 0.02em;
     color: var(--dark);
 }
 
-.card-text {
-    font-family: inherit
+.card-text_1 {
+    font-family: inherit;
+    margin: 0;
        
 }
 
@@ -168,10 +181,10 @@ ul {
     color: #ffffff;
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 18.75px;
-    letter-spacing: 4%;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 2%;
     cursor: pointer;
     border: none;
     padding: 16px 32px;
@@ -183,25 +196,33 @@ ul {
 }
 .main-button:hover,
 .main-button:focus {
-    background-color: var(--primary-brand);
+    background-color: #404BBF;
     color: #ffffff
 }
 .feature_list {
     display: flex;
     justify-content: center;
+    margin: 0;
+    padding-top: 120px;
+    padding-bottom: 120px;
     }
 .feature_list .item {
     width: 264px;
     margin-right: 24px;
    }
+   .section_2{
+    padding-bottom: 72px;
+   }
 .section-list {  
     display: block;
     justify-content: center;
     align-items: center;
+    margin: 0;
     margin-bottom: 120px;
 }
 
 .card-title_list {
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -212,11 +233,16 @@ img{
     max-width: 100%;
     height: auto;
 }
+.section_3{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 .team-list {
     width: 1158px;
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 120px;
+    padding-left: 15px;
+    padding-right: 15px;    
     background-color: var(--light);
     }
 .card-title-head,
@@ -224,14 +250,14 @@ img{
  {
     display: flex;
     justify-content: center;
-    margin-top: 120px;
-    margin-bottom: 72px;
+    margin: 0;
     font-weight: 600;
      font-size: 36px;
      line-height: 40px;
      letter-spacing: 2%;
      color: #2E2F42;
      margin-bottom: 72px;
+    
 }
 .flex_container {
      display: flex;
@@ -244,10 +270,24 @@ img{
         background-color: #ffffff;
         box-shadow: var(--card-shadow);
         }
-
+.card-content{
+    margin: 32px 16px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}  
+.card-title{
+    margin: 0;
+   }      
+.card-text{
+    margin: 0;
+    }
+.section_1 { 
+    padding-top: 192px;
+    padding-bottom: 192px;
+}
 .container_hero { 
-    margin-left: 15px;
-    margin-right: 15px;
+    width: 1158px;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
@@ -265,24 +305,20 @@ img{
     line-height: 60px;
     letter-spacing: 2%;
     color: #ffffff;
-    margin-bottom: 48px; 
-    margin-top: 192px;
-    margin-left: 474px;
-    margin-right: 474px;
-    padding: 0px 110px;
-    
-}
-.feature, .pbl{
+     margin-top: 192px;
+     margin-bottom: 48px;
+     }
+.container_feature, .pbl
+{
     visibility: hidden;
-    }
-
+}
 .section-page{
     padding-top: 96px;
     padding-bottom: 120px;
 }
 .container_btn {
     width: 1158px;
-    padding: 0 15px;
+    padding: 0;
     margin-left: auto;
     margin-right: auto;
     }
@@ -290,7 +326,6 @@ img{
     display: flex;
     justify-content: center;
     gap: 24px;
-    margin-top: 96px;
     margin-bottom: 72px;
 }
 
@@ -322,13 +357,27 @@ img{
     overflow: hidden;
 }
 .card-content{
+    margin-top: 32px;
     padding-left: 16px;
 }
 .card-title{
-    margin-top: 32px;
+    font-family: 'Roboto';
+    font-style: "semibold";
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    letter-spacing: 2%;
+    
 }
 .card-text{
+    font-family: 'Roboto';
+    font-style: "regular";
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 2%;
     margin-top: 8px;
+    color: #434455;
 }
 .portfolio-cards_box {
     padding: 32px 16px;
@@ -337,9 +386,16 @@ img{
     background-color: var(--dark);
     padding-top: 100px;
     padding-bottom: 100px;
-    padding-left: 156px;    
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px; 
+    margin-left: auto;
+    margin-right: auto;   
    }
+ 
 .footer-text {
+    margin: 0;
+    margin-top: 16px;
     color: var(--accent);
     font-size: 16px;
     line-height: 1.5;
