--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-/* font-family: 'Montserrat',
+/* font-family: 'Montserrat',*
 sans-serif;
 font-family: 'Raleway',
 sans-serif;
@@ -23,35 +23,30 @@ sans-serif; */
     --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-    
-body {
+    body {
     font-family: 'Roboto', sans-serif;
     color: var(--text);
     background-color: #ffffff;
-    
 }
-.container{ 
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
+.main-nav
+{   
+    display: flex;
+    align-items: center;
     margin-left: auto;
     margin-right: auto;
-}
+    box-shadow: var(--card-shadow);
+    }
 .logo {
     display: block;
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 24px;
     text-decoration: none;
     color: var(--dark);
     text-transform: uppercase;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    
-}
-
+    }
 .foot-logo {
     font-family: 'Raleway';
     font-style: normal;
@@ -61,59 +56,53 @@ body {
     text-decoration: none;
     color: var(--light);
     text-transform: uppercase;
-}
-
+    }
 .low-logo {
     color: var(--primary-brand);
     text-transform: uppercase;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    
-}
-.main-nav {
-    display: flex;
-    align-items: center;
     }
 .site-nav {
     display: flex;  
     margin: 0; 
     margin-left: 77px; 
-        
 }
-.site-nav li {
-    display: flex;
-    margin-right: 40px;
-    
-}
+.site-nav { gap: 40px;
+    padding: 0;
+   
+    }
 .site-nav .item:last-child {
     margin-right: 0px;
 }
-
 .nav-links {
     display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
     font-family: 'Roboto';
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     color: var(--dark);
     text-decoration: none;
     }
 .mail{
-        display: flex;
-        margin: 0;
-        margin-left: auto;
-        
-      }
-    .mail .item{ 
-        margin-left: 40px;
+    display: flex;
+    margin-left: auto;
+    font-family: 'Roboto';     
+    font-size: 16px;
+    line-height: 1.5;  
+    letter-spacing: 0.02em;  
+    padding: 0;
+    gap: 40px;
     }
+
 .nav-links:hover,
 .nav-links:focus {
     color: var(--primary-brand);
-
 }
-
 .contacts {
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -121,19 +110,38 @@ body {
     line-height: 1.5;
     text-decoration: none;
     color: var(--text);
-    
 }
-
 .contacts:hover,
 .contacts:focus {
     color: var(--primary-brand);
 }
-
 ul {
     list-style-type: none;
 }
-
-button {
+.hero {
+    padding-top: 192px;
+    padding-bottom: 192px;
+}
+.container_hero { 
+    padding-left: auto;
+    padding-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    min-height: 603px;
+    text-align: center;
+    background-color: var(--dark);
+}
+.hero-title {
+    width: 492px; 
+    font-weight: 700px;
+    font-size: 56px;
+    line-height: 60px;
+    
+    color: #ffffff;
+    margin: 0 auto 48px auto;
+    }
+button 
+{
     background-color: var(--light);
     color: var(--primary-brand);
     font-family: 'Roboto';
@@ -144,54 +152,45 @@ button {
     cursor: pointer;
     border: none;
     border-radius: 4px;
-
 }
-
 button:hover,
 button:focus {
     background-color: var(--primary-brand);
-    color: #ffffff
+    color: #ffffff;
 }
 .card-content { 
-    padding-left: 32px;
-    padding-right: 32px;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding: 16px 32px 16px 32px; 
  }
-.card-title_1 {
+.card-title {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
-    line-height: 24px;
-    margin: 0;
-    margin-bottom: 8px;
-    /* identical to box height, or 120% */
-
+    line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--dark);
-}
-
-.card-text_1 {
+    /* identical to box height, or 120% */
+    }
+.card-text {
     font-family: inherit;
     margin: 0;
-       
 }
-
 .main-button {
     background-color: var(--primary-brand);
     color: #ffffff;
-    font-family: inherit;
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 18.75px;
+    letter-spacing: 4%;
     cursor: pointer;
     border: none;
     padding: 16px 32px;
     border-radius: 4px;
+    margin-bottom: 192px;
     margin-left: auto;
     margin-right: auto;
-
 }
 .main-button:hover,
 .main-button:focus {
@@ -202,31 +201,32 @@ button:focus {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding-top: 120px;
-    padding-bottom: 120px;
-    margin-left: auto;
-    margin-right: auto;
+    padding: 0;
+    margin-bottom: 120px;
     }
 .feature_list .item {
     width: 264px;
     margin-right: 24px;
-   }
-   .section_wawd{
-    padding-bottom: 120px;
-   }
+    }
+   
 .section-list {  
     display: block;
     justify-content: center;
     align-items: center;
-    margin: 0;
-    
+    height: 412px;
+    margin-bottom: 120px;
 }
-
+.What_are_we_doing
+{ 
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 72px;
+}
 .card-title_list {
-    
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0;
     gap: 24px;
 }
 img{
@@ -234,91 +234,52 @@ img{
     max-width: 100%;
     height: auto;
 }
-.section_our-team{
-    padding-top: 120px;
-    padding-bottom: 120px;
-}
 .team-list {
-    width: 1158px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;    
+    height: 732px;
     background-color: var(--light);
     }
-.card-title-head,
-.card-title_team
+
+.our_team
  {
     display: flex;
     justify-content: center;
-    margin: 0;
-    font-weight: 600;
+    padding-top: 120px;
+    padding-bottom: 72px;
+    font-weight: 500;
      font-size: 36px;
      line-height: 40px;
      letter-spacing: 2%;
      color: #2E2F42;
-     margin-bottom: 72px;
-    
+    margin: 0;
 }
 .flex_container {
      display: flex;
-     justify-content: center;   
-     
+     justify-content: center;
+     margin: 0;
+     padding: 0;
+          
     }
 .team-list-item {
         width: 264px;
         margin-right: 24px;
         background-color: #ffffff;
         box-shadow: var(--card-shadow);
+        border-radius: 10px;
+        overflow: hidden;
         }
-.card-content{
-    
-    display: flex;
+ .card-content {
     text-align: center;
-    flex-direction: column;
-}  
-.card-title{
-    margin: 0;
-   }      
-.card-text{
-    margin: 0;
-    }
-.section_hero { 
-    padding-top: 192px;
-    padding-bottom: 192px;
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    background-color: var(--dark);
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 60px;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    margin-bottom: 48px;
-}
-.feature{
-    padding: 1128px 104px;
+ }       
 
-}
-.container_feature
-{   width: 1150px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    visibility: hidden;
-}
 .section-page{
     padding-top: 96px;
     padding-bottom: 120px;
 }
 .container_btn {
     width: 1158px;
-    padding: 0;
+    padding: 96px 15px 120px 15px;
     margin-left: auto;
     margin-right: auto;
     }
@@ -326,20 +287,18 @@ img{
     display: flex;
     justify-content: center;
     gap: 24px;
-    
-}
-
-.portfolio-btn_item {
-
+    margin:0;
+    padding: 0;
+    margin-bottom: 72px;
 }
 .portfolio-btn {
     line-height: 1.5;
     font-size: 16px;
     padding: 12px 24px;
-    }
+        }
 .portfolio-cards_list {
     padding: 0;
-       padding-bottom: 120px;
+    margin: 0;
     list-style: none;
     display: flex;
     flex-wrap: wrap;
@@ -348,29 +307,22 @@ img{
     flex-wrap: wrap;
     flex-basis: calc(100% / 3);
     }
-    .portfolio-cards_item {
+.portfolio-cards_item {
     flex-basis: calc((100% - 2 * 24px) / 3) ;
     box-shadow: var(--card-shadow);
     border-radius: 10px;
     overflow: hidden;
+    }
+.card-content_portfolio{
+    text-align: left;
+    padding-left: 16px;
+    margin: 32px 0;
 }
 .card-title{
-    font-family: 'Roboto';
-    font-style: "semibold";
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 2%;
-        
+    margin: 0 0 8px 0;
 }
-.card-text{
-    font-style: "regular";
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 2%;
-    margin-top: 8px;
-    color: #434455;
+.card-text_portfolio{
+    margin: 0;
 }
 .portfolio-cards_box {
     padding: 32px 16px;
@@ -379,16 +331,15 @@ img{
     background-color: var(--dark);
     padding-top: 100px;
     padding-bottom: 100px;
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px; 
-    margin-left: auto;
-    margin-right: auto;   
-   }
- .footer-text {
-    margin: 0;
-    margin-top: 16px;
+    padding-left: 156px;   
+    }
+.container_footer {
+    width: 264px;
+}  
+.footer-text {
     color: var(--accent);
     font-size: 16px;
     line-height: 1.5;
-    }
+    letter-spacing: 25%;
+    margin-top: 16px;
+}
