--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,8 @@ sans-serif; */
     --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
-    body {
+    
+body {
     font-family: 'Roboto', sans-serif;
     color: var(--text);
     background-color: #ffffff;
@@ -32,6 +33,8 @@ sans-serif; */
 {   
     display: flex;
     align-items: center;
+    padding-left: 156px;
+    padding-right: 156px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: var(--card-shadow);
@@ -46,6 +49,8 @@ sans-serif; */
     text-decoration: none;
     color: var(--dark);
     text-transform: uppercase;
+    padding-top: 24px;
+    padding-bottom: 24px;
     }
 .foot-logo {
     font-family: 'Raleway';
@@ -61,6 +66,7 @@ sans-serif; */
     color: var(--primary-brand);
     text-transform: uppercase;
     }
+
 .site-nav {
     display: flex;  
     margin: 0; 
@@ -77,7 +83,6 @@ sans-serif; */
     display: block;
     padding-top: 24px;
     padding-bottom: 24px;
-    
     font-family: 'Roboto';
     font-weight: 500;
     font-size: 16px;
@@ -87,12 +92,14 @@ sans-serif; */
     }
 .mail{
     display: flex;
+    margin: 0;
     margin-left: auto;
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-family: 'Roboto';     
     font-size: 16px;
     line-height: 1.5;  
     letter-spacing: 0.02em;  
-    padding: 0;
     gap: 40px;
     }
 
@@ -101,8 +108,6 @@ sans-serif; */
     color: var(--primary-brand);
 }
 .contacts {
-    padding-top: 24px;
-    padding-bottom: 24px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -119,15 +124,16 @@ ul {
     list-style-type: none;
 }
 .hero {
-    padding-top: 192px;
-    padding-bottom: 192px;
+    margin-bottom: 120px;
 }
 .container_hero { 
-    padding-left: auto;
-    padding-right: auto;
+    padding: 192px 15px;
     margin-left: auto;
     margin-right: auto;
     min-height: 603px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     background-color: var(--dark);
 }
@@ -136,7 +142,7 @@ ul {
     font-weight: 700px;
     font-size: 56px;
     line-height: 60px;
-    
+    letter-spacing: 2%;
     color: #ffffff;
     margin: 0 auto 48px auto;
     }
@@ -159,8 +165,8 @@ button:focus {
     color: #ffffff;
 }
 .card-content { 
-    padding: 16px 32px 16px 32px; 
- }
+    padding: 16px 32px 16px 32px;
+     }
 .card-title {
     font-family: 'Roboto';
     font-style: normal;
@@ -171,6 +177,7 @@ button:focus {
     color: var(--dark);
     /* identical to box height, or 120% */
     }
+
 .card-text {
     font-family: inherit;
     margin: 0;
@@ -201,32 +208,25 @@ button:focus {
     display: flex;
     justify-content: center;
     margin: 0;
-    padding: 0;
     margin-bottom: 120px;
+    padding: 0;
+    gap: 24px;
     }
 .feature_list .item {
     width: 264px;
-    margin-right: 24px;
     }
-   
 .section-list {  
     display: block;
     justify-content: center;
     align-items: center;
-    height: 412px;
     margin-bottom: 120px;
-}
-.What_are_we_doing
-{ 
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 72px;
 }
 .card-title_list {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0;
+    padding: 0;
     gap: 24px;
 }
 img{
@@ -240,11 +240,20 @@ img{
     height: 732px;
     background-color: var(--light);
     }
-
+.What_are_we_doing
+{ 
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 72px;
+    font-weight: 500;
+     font-size: 36px;
+     line-height: 40px;
+     letter-spacing: 2%;
+     color: #2E2F42;
+    }
 .our_team
  {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     padding-top: 120px;
     padding-bottom: 72px;
     font-weight: 500;
@@ -259,20 +268,19 @@ img{
      justify-content: center;
      margin: 0;
      padding: 0;
-          
+     gap: 24px;
     }
 .team-list-item {
         width: 264px;
-        margin-right: 24px;
         background-color: #ffffff;
         box-shadow: var(--card-shadow);
         border-radius: 10px;
         overflow: hidden;
-        }
- .card-content {
+    }
+.card-content {
     text-align: center;
+    padding: 32px 16px;
  }       
-
 .section-page{
     padding-top: 96px;
     padding-bottom: 120px;
@@ -291,11 +299,12 @@ img{
     padding: 0;
     margin-bottom: 72px;
 }
+
 .portfolio-btn {
     line-height: 1.5;
     font-size: 16px;
     padding: 12px 24px;
-        }
+    }
 .portfolio-cards_list {
     padding: 0;
     margin: 0;
