--- a/styles/styles.css
+++ b/styles/styles.css
@@ -344,6 +344,7 @@ img{
     padding-bottom: 100px;
  }
 .footer-text {
+    margin: 0;
     color: var(--accent);
     font-size: 16px;
     line-height: 1.5;
