--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,11 +34,13 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
+header{
+    box-shadow: var(--card-shadow);
+}
 .main-nav
 {   
     display: flex;
     align-items: center;
-    box-shadow: var(--card-shadow);
     }
 .logo {
     display: block;
@@ -76,7 +78,6 @@ body {
 .site-nav {
     gap: 40px;
     padding: 0;
-   
     }
 .nav-links {
     display: block;
@@ -124,7 +125,7 @@ ul {
     list-style-type: none;
 }
 .hero { 
-    padding: 192px 0 291px;
+    padding: 192px 0 192px;
     text-align: center;
     max-width: 1440px;  
     min-height: 603px;
@@ -133,7 +134,6 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
     background-color: var(--dark);
 }
 .hero-title {
@@ -152,7 +152,7 @@ button
     color: var(--primary-brand);
     font-family: 'Roboto';
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     cursor: pointer;
@@ -197,7 +197,7 @@ button:focus {
     border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
-}
+    }
 .main-button:hover,
 .main-button:focus {
     background-color: #404BBF;
@@ -207,9 +207,9 @@ button:focus {
     display: flex;
     justify-content: center;
     margin: 0;
-    margin-top: 120px;
-    margin-bottom: 120px;
     padding: 0;
+    padding-top: 120px;
+    padding-bottom: 120px;
     gap: 24px;
     }
     .card-text{
@@ -217,7 +217,7 @@ button:focus {
         font-style: 'regular';
         font-size: 16px;
         line-height: 24px;
-        line-height: 1.28em;
+        line-height: 1.28;
         vertical-align: 'Top';
         letter-spacing: 0.02em;
     }
@@ -262,7 +262,7 @@ img{
     font-weight: 500;
      font-size: 36px;
      line-height: 40px;
-     letter-spacing: 0.02em;
+     letter-spacing: 0.02;
      color: #2E2F42;
     margin: 0;
 }
@@ -289,8 +289,8 @@ img{
     padding-bottom: 120px;
 }
 .filters {
-    width: 1158px;
-    padding: 96px 15px 120px 15px;
+    padding-top: 96px;
+    padding-bottom: 120px;
     margin-left: auto;
     margin-right: auto;
     }
@@ -326,8 +326,10 @@ img{
     }
 .card-content_portfolio{
     text-align: left;
-    padding-left: 16px;
-    margin: 32px 0;
+    padding: 32px 16px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    border-radius: 0px 0px 4px 4px;
 }
 .card-title{
     margin: 0 0 8px 0;
@@ -348,7 +350,7 @@ img{
     color: var(--accent);
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 25%;
+    letter-spacing: 0.25;
     margin-top: 16px;
     width: 264px;
 }
